2006-07-05  Emmanuele Bassi  <ebassi@gmail.com>

	* t/GtkRecentManager.t: Add more tests for Gtk2::RecentInfo API.

2006-07-05  Emmanuele Bassi  <ebassi@gmail.com>

	A t/GtkRecentManager.t

	* t/GtkAccelGroup.t: Fix the name of the symbolic constant
	of KP_Enter, and make the test not fail.

	* t/GtkRecentManager.t: Initial test suite for Gtk2::RecentManager
	and Gtk2::RecentInfo.

	* copyright.pod: Update copyright.

	* xs/GtkRecentManager.xs: Add a PACKAGE for Gtk2::RecentInfo;
	add missing aliased methods; fix apidoc; use EXTEND when the
	size of the returned array is known.

2006-07-04  Emmanuele Bassi  <ebassi@gmail.com>

	* MANIFEST: Add new xs/GtkRecent*.xs files.

	* xs/GtkRecentChooser.xs: Miscellaneous fixes from kaffee.
	
	(gtk_recent_chooser_set_sort_func): Imply undef as default
	data for the sorting function.

	(gtk_recent_chooser_get_uris): EXTEND the stack with the
	right size of elements and return an empty array in case
	there are no URIs.

	* xs/GtkRecentManager.xs: Miscellaneous fixes from kaffee.

	(gtk_recent_info_get_application_info): Return an empty
	array on error.

	* xs/GtkIconTheme.xs: 
	* xs/GtkRecentManager.xs: Do not leak the returned pixbufs.

2006/07/03	kaffeetisch

	* t/GtkDnd.t: Make more robust.

2006-07-02  Emmanuele Bassi  <ebassi@gmail.com>

	* maps-2.10: Include GTK_TYPE_RECENT_FILTER_FLAGS to the list
	of known types.

	* xs/GtkRecentFilter.xs: Add string fields to the
	GtkRecentFilterInfo converter.

	* xs/GtkRecentManager.xs: Implement the Gtk2::RecentInfo
	boxed type and its API.

2006-07-02  Emmanuele Bassi  <ebassi@gmail.com>

	* xs/GtkRecentFilter.xs: Initial implementation of the
	Gtk2::RecentFilter object.

2006-07-02  Emmanuele Bassi  <ebassi@gmail.com>

	A xs/GtkRecentChooser.xs
	A xs/GtkRecentChooserDialog.xs
	A xs/GtkRecentChooserMenu.xs
	A xs/GtkRecentChooserWidget.xs
	A xs/GtkRecentFilter.xs
	A xs/GtkRecentManager.xs

	* maps-2.10:
	* xs_files-2.10:
	* xs/GtkRecent*.xs: Add initial support for GtkRecent; wrap